--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chrome Calculator</title>
     <link rel="stylesheet" href="popup.css">
-    <link
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval';">
 </head>
 <body>
     <div class="calculator-container">
